# shikhu

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/study/: SKILL.md
.entire/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  vet.yml
src/shikhu/: __init__.py  __main__.py  attribution.py  classifier.py  cli.py  generator.py  ingest.py  staleness.py  store.py  update_check.py
src/shikhu/_skill/: SKILL.md
src/shikhu/commands/: __init__.py  clean.py  coverage.py  generate_from_study.py  init.py  install_skill.py  quiz.py  refresh.py  review_log.py  study_context.py  summarize.py  utils.py
src/shikhu/prompts/archive/: prompts_v2.toml  prompts_v3.toml  prompts_v4.toml
tests/: conftest.py  test_attribution.py  test_clean.py  test_cli_help.py  test_coverage.py  test_generator.py  test_golden.py  test_ingest.py  test_init.py  test_install_skill.py  test_packaging.py  test_question_timing.py  test_quiz.py  test_refresh.py  test_regex_classifier.py  test_revalidation.py  test_staleness.py  test_store.py  test_summarize.py
